confirm view for host

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".ParseImageActivity"
             android:label="@string/title_activity_parse_image" >
         </activity>
+        <activity
+            android:name=".ListItemsActivity"
+            android:label="@string/title_activity_list_items" >
+        </activity>
     </application>
 
 </manifest>
