--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:name=".ListItemsActivity"
             android:label="@string/title_activity_list_items" >
         </activity>
+        <activity
+            android:name=".Adapter"
+            android:label="@string/title_activity_adapter" >
+        </activity>
     </application>
 
 </manifest>
